--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -41,6 +41,7 @@
       <footer>
         {% include footer/custom.html %}
         {% include footer.html %}
+		<a href="https://visitorbadge.io/status?path=https%3A%2F%2Fairvlab.github.io%2Fgrasp-anything%2F"><img src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fairvlab.github.io%2Fgrasp-anything%2F&label=Visitors&countColor=%2337d67a" /></a>
       </footer>
     </div>
 
